infra/k8s-prod/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.cu-connex.com
      http:
        paths:
          - path : /api/auth/?(.*)
            backend: 
              serviceName: auth-srv 
              servicePort: 3000
          - path: /api/users/?(.*)
            backend:
              serviceName: users-srv 
              servicePort: 3000
          - path: /api/teams/?(.*)
            backend:
              serviceName: users-srv 
              servicePort: 3000
          - path: /api/events/?(.*)
            backend:
              serviceName: event-srv 
              servicePort: 3000
          - path: /api/query/?(.*)
            backend:
              serviceName: query-srv 
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: web-srv 
              servicePort: 3000

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.cu-connex.com'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
